--- a/src/components/AddButton.css
+++ b/src/components/AddButton.css
@@ -10,6 +10,7 @@
     border: none;
     border-radius: 8px;
     cursor: pointer;
+    margin-left: 20px;
     transition: background-color 0.3s ease;
   }
   
