--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 
+
 .add-list-button {
     margin: 20px 0;
     padding: 10px 20px;
@@ -14,4 +15,12 @@
   
   .add-list-button:hover {
     background-color: #357ab8;
+  }
+
+  .page-container {
+    margin: 20px;
+    border: 1px solid #e0e0e0;
+    border-radius: 12px;
+    padding: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
